--- a/app/components/tech/tech.html
+++ b/app/components/tech/tech.html
@@ -7,16 +7,16 @@
 		</div>
 		<div class="tech__tabs">
 			<ul>
-				<li><a href="#" data-tab="tech__tab--1">Варочные <br> панели</a></li>
-				<li><a href="#">Духовые <br> шкафы</a></li>
-				<li class="active"><a href="#">Стиральные <br> машины</a></li>
+				<li class="active"><a href="#" data-tab="tech__tab--1">Варочные <br> панели</a></li>
+				<li><a href="#" data-tab="tech__tab--1">Духовые <br> шкафы</a></li>
+				<li><a href="#" data-tab="tech__tab--1">Стиральные <br> машины</a></li>
 				<li>Посудомоечные <br> машины</li>
 			</ul>
 		</div>
 	</div>
 	<section class="tech__section">
-		<div class="tech__content">
-			<div class="selection tech__tab--1">
+		<div class="tech__content tech__tab tech__tab--1">
+			<div class="selection">
 				<div class="selection__wrap">
 					<a href="#" class="selection__box">
 						<div class="selection__img">
@@ -153,9 +153,157 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- <div class="tech__content tech__tab tech__tab--2">
+			<div class="selection">
+				<div class="selection__wrap">
+					<a href="#" class="selection__box">
+						<div class="selection__img">
+							<img src="/images/goods1.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="/images/goods1.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="/images/goods1.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="/images/goods1.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="/images/goods1.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="/images/goods1.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="/images/goods1.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="/images/goods1.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="/images/goods1.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="/images/goods1.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="/images/goods1.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="/images/goods1.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+				</div>
+			</div>
+		</div> -->
+
+
+		
+		@@include('../paginator/pag.html')
+
 		<aside>
 			@@include('../adv/adv-vertical.html')
 		</aside>
+
+		</div>
+
+
 	</section>
-	@@include('../paginator/pag.html')
+	
 </div>
