--- a/app/template/kitchen.html
+++ b/app/template/kitchen.html
@@ -15,9 +15,18 @@
         
 </div>
 
+@@include('../components/scripts/scripts.html')
 
 <script>
-   
+	$('div.slider__big').sliderShop({
+  	caseLimit: 1, //кол-во товаров в витрине
+    spaceSection: 'auto', //расстояние между секциями
+    animation: 'slide', //тип анимации
+    timer: 4000, //автопереключение
+    repeat: true, //показ слайдов по кругу
+    countBox: 'slider__ind', //селектор списка
+    countSelect: true
+});
 </script>
 
 
