--- a/app/components/sliders/_slider-big.scss
+++ b/app/components/sliders/_slider-big.scss
@@ -2,6 +2,19 @@
 	&__big {
 		position: relative;
 
+		.slider__ind.active {
+			opacity: .5;
+		}
+
+		.swither__item {
+			display: inline-block;
+			width: 1100px;
+		}
+
+		.slider__ind {
+			cursor: pointer;
+		}
+
 		.nav {
 			top: 274px;
 			z-index: 10;
