--- a/app/components/sliders/_slider-head.scss
+++ b/app/components/sliders/_slider-head.scss
@@ -16,6 +16,17 @@
 		height: 120px;
 	}
 
+	&__wrapper {
+		height: 402px;
+		// overflow: hidden;
+		position: absolute;
+		width: 100000px;
+	}
+
+	&__img {
+		margin-right: 250px;
+	}
+
 	&__indicator {
 		height: 50px;
 		text-transform: uppercase;
@@ -25,6 +36,8 @@
 		min-width: 1024px;
 		margin: 0 auto;
 		letter-spacing: .4px;
+		position: relative;
+		z-index: 15;
 
 		ul {
 			
@@ -67,14 +80,18 @@
 	}
 
 	&__main {
-		height: 400px;
+		height: 450px;
 		max-width: 1300px;
 		margin-left: -100px;
 		position: relative;
-		padding-right: 250px;
+		overflow-x: hidden;
+		margin-top: -100px;
+		padding-top: 100px;
+		// padding-right: 250px;
 
 		li {
 			position: relative;
+			display: inline-block;
 		}
 	}
 }
@@ -88,7 +105,7 @@
 	border: 20px solid rgba(51, 51, 51, 0.45);
 	background-clip: padding-box;
 	cursor: pointer;
-	transition: all .2s ease-out 0s;
+	// transition: all .2s ease-out 0s;
 
 	
 
@@ -107,12 +124,12 @@
 
 	&--2 {
 		top: 102px;
-		right: 352px;
+		right: 600px;
 	}
 
 	&--3 {
 		bottom: 39px;
-		right: 155px;
+		right: 495px;
 	}
 
 	&__tooltip {
@@ -128,6 +145,7 @@
 		transition: all .2s ease-out 0s;
 		visibility: hidden;
 		width: 250px;
+		z-index: 10;
 
 		&:before {
 			content: '';
@@ -180,7 +198,7 @@
 	&--cost {
 		box-sizing: border-box;
 		padding: 29px 48px 17px;
-		right: -250px;
+		right: 0;
 		top: 75px;
 
 		&__name {
@@ -231,4 +249,8 @@
 		right: 102px;
 		transform: rotate(180deg);
 	}
+}
+
+.slider__anim {
+	display: none;
 }
