--- a/app/components/sliders/slider-big.html
+++ b/app/components/sliders/slider-big.html
@@ -18,16 +18,19 @@
 			<li>
 				<img src="/images/slider-big.jpg" alt="foto">
 			</li>
+			<li>
+				<img src="/images/slider-big.jpg" alt="foto">
+			</li>
 		</ul>
 	</div>
 	<div class="slider__preview">
 		<ul>
-			<li><img src="./images/slider_smal1.jpg" height="100" width="150" alt="foto"></li>
-			<li><img src="./images/slider_smal2.jpg" height="100" width="150" alt="foto"></li>
-			<li><img src="./images/slider_smal3.jpg" height="100" width="150" alt="foto"></li>
-			<li><img src="./images/slider_smal4.jpg" height="100" width="150" alt="foto"></li>
-			<li><img src="./images/slider_smal5.jpg" height="100" width="150" alt="foto"></li>
-			<li><img src="./images/slider_smal6.jpg" height="100" width="150" alt="foto"></li>
+			<li class="slider__ind active"><img src="./images/slider_smal1.jpg" height="100" width="150" alt="foto"></li>
+			<li class="slider__ind"><img src="./images/slider_smal2.jpg" height="100" width="150" alt="foto"></li>
+			<li class="slider__ind"><img src="./images/slider_smal3.jpg" height="100" width="150" alt="foto"></li>
+			<li class="slider__ind"><img src="./images/slider_smal4.jpg" height="100" width="150" alt="foto"></li>
+			<li class="slider__ind"><img src="./images/slider_smal5.jpg" height="100" width="150" alt="foto"></li>
+			<li class="slider__ind"><img src="./images/slider_smal6.jpg" height="100" width="150" alt="foto"></li>
 		</ul>
 	</div>
 </div>
