--- a/app/template/txt.html
+++ b/app/template/txt.html
@@ -15,9 +15,16 @@
         
 </div>
 
+@@include('../components/scripts/scripts.html')
 
 <script>
-   
+   $('div.slider__work').sliderShop({
+  	caseLimit: 4, //кол-во товаров в витрине
+    spaceSection: 'auto', //расстояние между секциями
+    animation: 'slide', //тип анимации
+    timer: 4000, //автопереключение
+    repeat: true, //показ слайдов по кругу
+  });
 </script>
 
 
