--- a/app/components/kitchen/kitchen.html
+++ b/app/components/kitchen/kitchen.html
@@ -97,7 +97,7 @@
 			<div class="selection__wrap">
 				<div class="selection__box">
 					<div class="selection__img">
-						<img src="/images/goods1.jpg" alt="foto">
+						<img src="./images/goods1.jpg" alt="foto">
 					</div>
 					<div class="selection__name">Варочная панель Electrolux</div>
 					<div class="selection__product">T62R36S1</div>	
@@ -107,7 +107,7 @@
 				</div>
 				<div class="selection__box">
 					<div class="selection__img">
-						<img src="/images/goods1.jpg" alt="foto">
+						<img src="./images/goods1.jpg" alt="foto">
 					</div>
 					<div class="selection__name">Варочная панель Electrolux</div>
 					<div class="selection__product">T62R36S1</div>
@@ -117,7 +117,7 @@
 				</div>
 				<div class="selection__box">
 					<div class="selection__img">
-						<img src="/images/goods1.jpg" alt="foto">
+						<img src="./images/goods1.jpg" alt="foto">
 					</div>
 					<div class="selection__name">Варочная панель Electrolux</div>
 					<div class="selection__product">T62R36S1</div>
@@ -127,7 +127,7 @@
 				</div>
 				<div class="selection__box">
 					<div class="selection__img">
-						<img src="/images/goods1.jpg" alt="foto">
+						<img src="./images/goods1.jpg" alt="foto">
 					</div>
 					<div class="selection__name">Варочная панель Electrolux</div>
 					<div class="selection__product">T62R36S1</div>
