--- a/app/components/sliders/slider-big.html
+++ b/app/components/sliders/slider-big.html
@@ -4,22 +4,22 @@
 	<div class="slider__big--window">
 		<ul class="slider__wrapper">
 			<li>
-				<img src="/images/slider-big.jpg" alt="foto">
+				<img src="./images/slider-big.jpg" alt="foto">
 			</li>
 			<li>
-				<img src="/images/slider-big.jpg" alt="foto">
+				<img src="./images/slider-big.jpg" alt="foto">
 			</li>
 			<li>
-				<img src="/images/slider-big.jpg"alt="foto">
+				<img src="./images/slider-big.jpg"alt="foto">
 			</li>
 			<li>
-				<img src="/images/slider-big.jpg" alt="foto">
+				<img src="./images/slider-big.jpg" alt="foto">
 			</li>
 			<li>
-				<img src="/images/slider-big.jpg" alt="foto">
+				<img src="./images/slider-big.jpg" alt="foto">
 			</li>
 			<li>
-				<img src="/images/slider-big.jpg" alt="foto">
+				<img src="./images/slider-big.jpg" alt="foto">
 			</li>
 		</ul>
 	</div>
