--- a/app/components/tech/tech.html
+++ b/app/components/tech/tech.html
@@ -20,7 +20,7 @@
 				<div class="selection__wrap">
 					<a href="#" class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -31,7 +31,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -42,7 +42,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -53,7 +53,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -64,7 +64,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -75,7 +75,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -86,7 +86,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -97,7 +97,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -108,7 +108,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -119,7 +119,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -130,7 +130,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -141,7 +141,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -159,7 +159,7 @@
 				<div class="selection__wrap">
 					<a href="#" class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -170,7 +170,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -181,7 +181,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -192,7 +192,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -203,7 +203,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -214,7 +214,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -225,7 +225,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -236,7 +236,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -247,7 +247,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -258,7 +258,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -269,7 +269,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -280,7 +280,7 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="/images/goods1.jpg" alt="foto">
+							<img src="./images/goods1.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
