--- a/app/components/call/call.html
+++ b/app/components/call/call.html
@@ -37,11 +37,11 @@
 					<div class="e-form">
 						<p>Укажите время:</p>
 						<label for="time-start">с:</label>
-						<input type="text" name="time-start" id="time-start" required pattern="^\d{1,6}$" class="input--small">
+						<input type="text" name="time-start" id="time-start"  class="input--small">
 						
 						<div class="fl-r">
 							<label for="time-end">до:</label>
-							<input type="text" name="time-end" id="time-end" required pattern="^\d{1,6}$" class="input--small">
+							<input type="text" name="time-end" id="time-end" class="input--small">
 						</div>
 					</div>
 
