--- a/app/components/sliders/slider.html
+++ b/app/components/sliders/slider.html
@@ -9,37 +9,37 @@
 	<div class="slider__work--window">
 		<ul class="slider__wrapper">
 			<li>
-				<a href="#">
+				<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
 					<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
 					<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
 					<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
 					<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
 					<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
 					<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
 					<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
 				</a>
 			</li>
