--- a/app/components/tech/tech.html
+++ b/app/components/tech/tech.html
@@ -8,9 +8,9 @@
 		<div class="tech__tabs">
 			<ul>
 				<li class="active"><a href="#" data-tab="tech__tab--1">Варочные <br> панели</a></li>
-				<li><a href="#" data-tab="tech__tab--1">Духовые <br> шкафы</a></li>
-				<li><a href="#" data-tab="tech__tab--1">Стиральные <br> машины</a></li>
-				<li>Посудомоечные <br> машины</li>
+				<li><a href="#" data-tab="tech__tab--2">Духовые <br> шкафы</a></li>
+				<li><a href="#" data-tab="tech__tab--3">Стиральные <br> машины</a></li>
+				<li><a href="#" data-tab="tech__tab--4">Посудомоечные <br> машины</a></li>
 			</ul>
 		</div>
 	</div>
@@ -154,12 +154,89 @@
 			</div>
 		</div>
 
-		<!-- <div class="tech__content tech__tab tech__tab--2">
+		<div class="tech__content tech__tab tech__tab--2">
 			<div class="selection">
 				<div class="selection__wrap">
 					<a href="#" class="selection__box">
 						<div class="selection__img">
-							<img src="./images/goods1.jpg" alt="foto">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods2.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -212,9 +289,16 @@
 							от 75 450 руб.
 						</div>
 					</a>
-					<a class="selection__box">
+				</div>
+			</div>
+		</div>
+
+		<div class="tech__content tech__tab tech__tab--3">
+			<div class="selection">
+				<div class="selection__wrap">
+					<a href="#" class="selection__box">
 						<div class="selection__img">
-							<img src="./images/goods1.jpg" alt="foto">
+							<img src="./images/goods3.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -225,7 +309,201 @@
 					</a>
 					<a class="selection__box">
 						<div class="selection__img">
-							<img src="./images/goods1.jpg" alt="foto">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods3.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="tech__content tech__tab tech__tab--4">
+			<div class="selection">
+				<div class="selection__wrap">
+					<a href="#" class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
+							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
+						</div>
+						<div class="selection__name">Варочная панель Electrolux</div>
+						<div class="selection__product">T62R36S1</div>
+						<div class="selection__cost">
+							от 75 450 руб.
+						</div>
+					</a>
+					<a class="selection__box">
+						<div class="selection__img">
+							<img src="./images/goods4.jpg" alt="foto">
 							<div class="tooltip"><p>Пара строк про <br> выбранный товар</p></div>
 						</div>
 						<div class="selection__name">Варочная панель Electrolux</div>
@@ -291,7 +569,9 @@
 					</a>
 				</div>
 			</div>
-		</div> -->
+		</div>
+
+
 
 
 		
