--- a/app/components/type/type.html
+++ b/app/components/type/type.html
@@ -17,14 +17,16 @@
 		<div class="type__content">
 			<div class="type__tab tech__tab--1">
 				<div class="type__box">
-					<div class="type__name">
-						<span>Кухня Эмаль "Версаль"</span>
-						<span class="type__cost">от 75 450 руб.</span>
-					</div>
-					
-					<div class="type__img">
-						<img src="./images/type-big.jpg" alt="foto">
-					</div>
+					<a href="kitchen.html" class="link__wrap">
+						<div class="type__name">
+							<span>Кухня Эмаль "Версаль"</span>
+							<span class="type__cost">от 75 450 руб.</span>
+						</div>
+						
+						<div class="type__img">
+							<img src="./images/type-big.jpg" alt="foto">
+						</div>
+					</a>
 					<div class="fasad">
 						<p>Выберите цвет:</p>
 						<ul>
@@ -74,14 +76,16 @@
 					</div>
 				</div>
 				<div class="type__box">
-					<div class="type__name">
-						<span>Кухня Эмаль "Версаль"</span>
-						<span class="type__cost">от 75 450 руб.</span>
-					</div>
-					
-					<div class="type__img">
-						<img src="./images/type-big.jpg" alt="foto">
-					</div>
+					<a href="kitchen.html" class="link__wrap">
+						<div class="type__name">
+							<span>Кухня Эмаль "Версаль"</span>
+							<span class="type__cost">от 75 450 руб.</span>
+						</div>
+						
+						<div class="type__img">
+							<img src="./images/type-big.jpg" alt="foto">
+						</div>
+					</a>
 					<div class="fasad">
 						<p>Выберите цвет:</p>
 						<ul>
@@ -131,14 +135,16 @@
 					</div>
 				</div>
 				<div class="type__box">
-					<div class="type__name">
-						<span>Кухня Эмаль "Версаль"</span>
-						<span class="type__cost">от 75 450 руб.</span>
-					</div>
-					
-					<div class="type__img">
-						<img src="./images/type-big.jpg" alt="foto">
-					</div>
+					<a href="kitchen.html" class="link__wrap">
+						<div class="type__name">
+							<span>Кухня Эмаль "Версаль"</span>
+							<span class="type__cost">от 75 450 руб.</span>
+						</div>
+						
+						<div class="type__img">
+							<img src="./images/type-big.jpg" alt="foto">
+						</div>
+					</a>
 					<div class="fasad">
 						<p>Выберите цвет:</p>
 						<ul>
