--- a/app/template/tech.html
+++ b/app/template/tech.html
@@ -18,8 +18,10 @@
 @@include('../components/scripts/scripts.html')
 
 <script>
-   
+   $('.tech__tabs').tab(false, 200);
+   // console.log($('.tech__tabs').tab())
 </script>
+
 
 
 
