--- a/app/components/type/type.html
+++ b/app/components/type/type.html
@@ -22,11 +22,18 @@
 							<span>Кухня Эмаль "Версаль"</span>
 							<span class="type__cost">от 75 450 руб.</span>
 						</div>
-						
-						<div class="type__img">
-							<img src="./images/type-big.jpg" alt="foto">
-						</div>
 					</a>
+					<div class="type__img">
+						<a href="kitchen.html" class="link__wrap">
+							<img src="./images/type-big.jpg" alt="foto">
+						</a>
+						<div class="type__img--tooltip">
+							<p>
+								Кухни Фльфа изготавливаются для каждого заказчика по индивидуальному проекту в условиях фабричного производства, на высокотехнологичном оборудовании с применением высококачественных комплектующих.
+								<a href="#">Подробнее</a>
+							</p>
+						</div>
+					</div>
 					<div class="fasad">
 						<p>Выберите цвет:</p>
 						<ul>
@@ -81,11 +88,18 @@
 							<span>Кухня Эмаль "Версаль"</span>
 							<span class="type__cost">от 75 450 руб.</span>
 						</div>
-						
-						<div class="type__img">
-							<img src="./images/type-big.jpg" alt="foto">
-						</div>
 					</a>
+					<div class="type__img">
+						<a href="kitchen.html" class="link__wrap">
+							<img src="./images/type-big.jpg" alt="foto">
+						</a>
+						<div class="type__img--tooltip">
+							<p>
+								Кухни Фльфа изготавливаются для каждого заказчика по индивидуальному проекту в условиях фабричного производства, на высокотехнологичном оборудовании с применением высококачественных комплектующих.
+								<a href="#">Подробнее</a>
+							</p>
+						</div>
+					</div>
 					<div class="fasad">
 						<p>Выберите цвет:</p>
 						<ul>
@@ -140,11 +154,18 @@
 							<span>Кухня Эмаль "Версаль"</span>
 							<span class="type__cost">от 75 450 руб.</span>
 						</div>
-						
-						<div class="type__img">
-							<img src="./images/type-big.jpg" alt="foto">
-						</div>
 					</a>
+					<div class="type__img">
+						<a href="kitchen.html" class="link__wrap">
+							<img src="./images/type-big.jpg" alt="foto">
+						</a>
+						<div class="type__img--tooltip">
+							<p>
+								Кухни Фльфа изготавливаются для каждого заказчика по индивидуальному проекту в условиях фабричного производства, на высокотехнологичном оборудовании с применением высококачественных комплектующих.
+								<a href="#">Подробнее</a>
+							</p>
+						</div>
+					</div>
 					<div class="fasad">
 						<p>Выберите цвет:</p>
 						<ul>
