--- a/app/components/type/_type.scss
+++ b/app/components/type/_type.scss
@@ -48,6 +48,54 @@
 	&__img {
 		max-width: 900px;
 		max-height: 400px;
+		position: relative;
+		overflow: hidden;
+
+		&--tooltip {
+			width: 250px;
+			background-color: rgba(255, 255, 255, 0.65);
+			height: 100%;
+			top: 0;
+			right: -250px;
+			position: absolute;
+			padding: 10px;
+			box-sizing: border-box;
+			transition: all .2s ease-out 0s;
+
+			&:before {
+				content: '';
+				height: 100%;
+				width: 0;
+				display: inline-block;
+				vertical-align: middle;
+			}
+
+			p {
+				display: inline-block;
+				width: 100%;
+				margin-right: -4px;
+				vertical-align: middle;
+			}
+
+			a {
+				color: $clr-red;
+				text-decoration: underline;
+				position: absolute;
+				bottom: 15px;
+				right: 10px;
+
+				&:hover {
+					text-decoration: none;
+				}
+			}
+		}
+
+		&:hover {
+			.type__img--tooltip {
+				right: 0;
+				transition: all .2s ease-out 0s;
+			}
+		}
 	}
 
 	&__box {
