--- a/app/components/scripts/scripts.html
+++ b/app/components/scripts/scripts.html
@@ -12,7 +12,7 @@
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <script src="components/scripts/tabs.js"></script>
-    <script src="components/scripts/tabs.js"></script>
+    <script src="components/txt/video.js"></script>
     <script src="components/scripts/droplist.js"></script>
     <script src="components/sliders/slider.js"></script>
     
