--- a/app/components/txt/txt.html
+++ b/app/components/txt/txt.html
@@ -342,11 +342,8 @@
 		</div>
 
 		<div class="txt__video">
-			<iframe id="ytplayer" type="text/html" width="720" height="405"
-			src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1"
-			frameborder="0" allowfullscreen>
-		</iframe>
-	</div>
+			<div id="player" data-urlid="I53HDr0-Qew"></div>
+		</div>
 
 	<div class="txt__wrap">
 		<div class="txt__icons">
