--- a/app/template/txt.html
+++ b/app/template/txt.html
@@ -10,66 +10,41 @@
 
 @@include('../components/txt/txt.html')
 
+<div id="player2" data-urlid="M7lc1UVf-VE"></div>
+<div id="player3" data-urlid="qatmJtIJAPw"></div>
 
 @@include('../components/footer/footer.html')
 
-<div id="player"></div>
 
-    <script>
-      // 2. This code loads the IFrame Player API code asynchronously.
-      var tag = document.createElement('script');
 
-      tag.src = "https://www.youtube.com/iframe_api";
-
-      var firstScriptTag = document.getElementsByTagName('script')[0];
-
-      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-      // 3. This function creates an <iframe> (and YouTube player)
-      //    after the API code downloads.
-
-      var player;
-      function onYouTubeIframeAPIReady() {
-        player = new YT.Player('player', {
-          height: '700',
-          width: '640',
-          videoId: 'M7lc1UVf-VE',
-          events: {
-            // 'onReady': onPlayerReady,
-            // 'onStateChange': onPlayerStateChange
-          }
-        });
-      }
-
-      // 4. The API will call this function when the video player is ready.
-      function onPlayerReady(event) {
-        event.target.playVideo();
-      }
-
-    </script>
+<script src="https://www.youtube.com/iframe_api"></script>
         
 </div>
 
 @@include('../components/scripts/scripts.html')
 
 <script>
-   $('div.slider__work').sliderShop({
-  	caseLimit: 4, //кол-во товаров в витрине
-    spaceSection: 'auto', //расстояние между секциями
-    animation: 'slide', //тип анимации
-    timer: 4000, //автопереключение
-    repeat: true, //показ слайдов по кругу
-  });
-
-
-    $('body').on('click', function() {
-	    	if (player) {
-	    player.playVideo();
-	  }
+    $('div.slider__work').sliderShop({
+      caseLimit: 4, //кол-во товаров в витрине
+      spaceSection: 'auto', //расстояние между секциями
+      animation: 'slide', //тип анимации
+      timer: 4000, //автопереключение
+      repeat: true, //показ слайдов по кругу
     });
 
+    $('#player, #player2, #player3').playerYouTube();
 
-console.log(ytplayer);
+
+
+
+   //  $('body').on('click', function() {
+	  //   	if (player) {
+	  //   player.playVideo();
+	  // }
+   //  });
+
+
+
 	
    
 </script>
